--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -1,9 +1,9 @@
 #list-area {
   .alert-info,
   .show-more.has-topics {
-    position: sticky !important;
-    position: -webkit-sticky !important;
-    top: var(--header-offset) !important;
+    position: sticky;
+    position: -webkit-sticky;
+    top: var(--header-offset);
     z-index: 8;
     @if $align_text_center == "true" {
       a {
