Add FKB Pro theme support

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -13,6 +13,9 @@
     @if $fixed_bottom_position == "true" {
       position: fixed;
       width: calc(100% - 2em);
+      @if $fkbpro_theme_enabled == "true" {
+        width: 100%;
+      }
       left: 0;
       top: auto;
       bottom: 0;
