--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -4,6 +4,11 @@
     position: sticky;
     position: -webkit-sticky;
     top: var(--header-offset);
+    @if $fkbpro_theme_enabled == "true" {
+      position: sticky !important;
+      position: -webkit-sticky !important;
+      top: var(--header-offset) !important;
+    }
     z-index: 8;
     @if $align_text_center == "true" {
       a {
